// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`111 should turn into an object 1`] = `
Object {
  "BALANCE": Object {
    "available": "0",
    "fees": "0",
  },
  "BIP38_ENCRYPTED_KEY": undefined,
  "BROADCASTED_TRANSACTIONS": Object {},
  "DERIVATION_PATH": undefined,
  "LEDGER_PATH": "1",
  "SEQUENCE": "111932",
  "SIGNED_TRANSACTIONS": Object {},
  "STARRED": true,
  "VOTES": Array [],
  "VOTES_AVAILABLE": 0,
  "VOTES_USED": 0,
  "WAITING_FOR_OTHER_SIGNATURES_TRANSACTIONS": Object {},
  "WAITING_FOR_OUR_SIGNATURE_TRANSACTIONS": Object {},
}
`;

exports[`123 should turn into an object 1`] = `
Object {
  "BALANCE": Object {
    "available": "0",
    "fees": "0",
    "locked": "3",
    "tokens": Object {
      "ARK": "4",
      "BTC": "5",
      "ETH": "6",
    },
  },
  "BIP38_ENCRYPTED_KEY": undefined,
  "BROADCASTED_TRANSACTIONS": Object {},
  "DERIVATION_PATH": undefined,
  "LEDGER_PATH": "1",
  "SEQUENCE": "111932",
  "SIGNED_TRANSACTIONS": Object {},
  "STARRED": true,
  "VOTES": Array [],
  "VOTES_AVAILABLE": 0,
  "VOTES_USED": 0,
  "WAITING_FOR_OTHER_SIGNATURES_TRANSACTIONS": Object {},
  "WAITING_FOR_OUR_SIGNATURE_TRANSACTIONS": Object {},
}
`;

exports[`456 should turn into an object 1`] = `
Object {
  "BALANCE": Object {
    "available": "1",
    "fees": "2",
    "locked": "3",
    "tokens": Object {
      "ARK": "4",
      "BTC": "5",
      "ETH": "6",
    },
  },
  "BIP38_ENCRYPTED_KEY": undefined,
  "BROADCASTED_TRANSACTIONS": Object {},
  "DERIVATION_PATH": undefined,
  "LEDGER_PATH": "1",
  "SEQUENCE": "111932",
  "SIGNED_TRANSACTIONS": Object {},
  "STARRED": true,
  "VOTES": Array [],
  "VOTES_AVAILABLE": 0,
  "VOTES_USED": 0,
  "WAITING_FOR_OTHER_SIGNATURES_TRANSACTIONS": Object {},
  "WAITING_FOR_OUR_SIGNATURE_TRANSACTIONS": Object {},
}
`;

exports[`789 should turn into an object 1`] = `
Object {
  "BALANCE": Object {
    "available": "0",
    "fees": "0",
  },
  "BIP38_ENCRYPTED_KEY": undefined,
  "BROADCASTED_TRANSACTIONS": Object {},
  "DERIVATION_PATH": undefined,
  "LEDGER_PATH": "1",
  "SEQUENCE": "111932",
  "SIGNED_TRANSACTIONS": Object {},
  "STARRED": true,
  "VOTES": Array [],
  "VOTES_AVAILABLE": 0,
  "VOTES_USED": 0,
  "WAITING_FOR_OTHER_SIGNATURES_TRANSACTIONS": Object {},
  "WAITING_FOR_OUR_SIGNATURE_TRANSACTIONS": Object {},
}
`;
